--- a/pixel/pixel/sitestatic/css/main.css
+++ b/pixel/pixel/sitestatic/css/main.css
@@ -97,11 +97,67 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html, body {
+    height: 100%;
+}
 
+.container {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
 
+nav {
+    width: 20%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    float: left;
+}
 
+    nav > li {
+        list-style: none;
+    }
 
+    nav > li > a {
+        display: block;
+        width: 90%;
+        padding: 1.2em 0;
+        text-decoration: none;
+        color: white;
+        text-align: right;
+        padding-right: 10%;
+        transition: background-color 0.5s ease;
+    }
 
+    nav > li > a:hover {
+        background-color: rgba(0,0,0,0.2);
+        -moz-box-shadow:    inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+        -webkit-box-shadow: inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+        box-shadow:         inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+    }
+
+    nav > li > a.active {
+        background-color: rgba(0,0,0,0.4);
+        -moz-box-shadow:    inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+        -webkit-box-shadow: inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+        -o-
+        box-shadow:         inset 0 0 0.5em 0 rgba(0,0,0,0.125);
+    }
+
+.main {
+    width: 80%;
+    height: 100%;
+    float: right;
+    background-color: rgba(0,54,45,0.8);
+}
+
+.map {
+    width: 80%;
+    height: 70%;
+    margin: 5% auto;
+    background-color: rgba(12,15,151,0.7);
+}
 
 
 
