--- a/pixel/pixel/sitestatic/css/main.css
+++ b/pixel/pixel/sitestatic/css/main.css
@@ -97,7 +97,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+.login {
+    margin: -50px 0 0 -200px;
+    width: 400px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    background: #ccc;
+}
 
 
 
